--- a/Non Profit Analysis/Readme
+++ b/Non Profit Analysis/Readme
@@ -1,9 +1,9 @@
-# Analysis to find out how various strategies impact an Orginazation's cost and effectiveness
+*Analysis to find out how various strategies impact an Orginazation's cost and effectiveness*
 Create a demo example of why a Non profit should transit to a hybrid solution
 
 # Organization Complexity Analysis
 A complexity analysis based on evaluating a non profit company to hybrid model transition using SVD (singular value decompistion)
 
-# Uncertainty Analysis - How Uncertain Scenario can impact project cost and time? 
+## Uncertainty Analysis - How Uncertain Scenario can impact project cost and time? 
 This Uncertainty Anlysis method takes project Cost & Time as input data point.  First it applies triangle distribution & normal distribution to existing 10 data points. Next step, it uses Monte Carlos method, running 1000 times by sampling random variables each time. From this way, we can see how uncertainty impact existing data using a form of topograph. 
 
